--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/default.cfg
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/default.cfg
@@ -8,11 +8,12 @@ separateInstalled="true"
 newWindow="_self"
 hideIncompatible="true"
 dockerSearch="no"
-appOfTheDay="yes"
+appOfTheDay="no"
 maxPerPage="25"
 hideDeprecated="true"
 tooltipster="true"
 hoverTime="1000"
 searchBarFocus="auto"
 skin="Wide"
+startup="new"
 
