--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/default.cfg
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/default.cfg
@@ -1,4 +1,3 @@
-timeNew="-3 Months"
 viewMode="detail"
 favourite="None"
 iconSize="96"
@@ -8,12 +7,11 @@ separateInstalled="true"
 newWindow="_self"
 hideIncompatible="true"
 dockerSearch="no"
-appOfTheDay="no"
 maxPerPage="25"
 hideDeprecated="true"
 tooltipster="true"
 hoverTime="1000"
 searchBarFocus="auto"
-skin="Wide"
+skin="Narrow"
 startup="new"
 
